--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-02-navigation/02-organisms-00-regions-02-navigation.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-02-navigation/02-organisms-00-regions-02-navigation.escaped.html
@@ -13,9 +13,9 @@
             &lt;a href=&quot;#&quot;&gt; About &lt;/a&gt;
           &lt;/li&gt;
           &lt;!-- INNOVATIONS --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Innovations &lt;/a&gt;
-            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
                 &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
                   &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
@@ -36,7 +36,7 @@
             &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- FUNDING --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
             &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
@@ -58,7 +58,7 @@
             &lt;/div
           &lt;/li&gt;
           &lt;!-- RESOURCES --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
             &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
