--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.escaped.html
@@ -24,9 +24,9 @@
             &lt;a href=&quot;#&quot;&gt; About &lt;/a&gt;
           &lt;/li&gt;
           &lt;!-- INNOVATIONS --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Innovations &lt;/a&gt;
-            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
                 &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
                   &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
@@ -47,7 +47,7 @@
             &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- FUNDING --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
             &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
@@ -69,7 +69,7 @@
             &lt;/div
           &lt;/li&gt;
           &lt;!-- RESOURCES --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
             &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
@@ -666,13 +666,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/buttercup-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
+                      Posted by &lt;strong&gt;Princess Buttercup&lt;/strong&gt; | December 28 at 8:34am
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
@@ -681,13 +681,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/watson-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/scully-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Dr. John Watson, M.D.&lt;/strong&gt; | February 10 at 1:20pm
+                      Posted by &lt;strong&gt;Dana Scully&lt;/strong&gt; | April 13 at 10:14am
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
