--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-discussion-landing/04-pages-discussion-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-discussion-landing/04-pages-discussion-landing.html
@@ -81,9 +81,9 @@
             <a href="#"> About </a>
           </li>
           <!-- INNOVATIONS -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown">
             <a href="#"> Innovations </a>
-            <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+            <div class="tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
                 <div class="tb-megamenu-row row-fluid">
                   <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
@@ -104,7 +104,7 @@
             </div>
           </li>
           <!-- FUNDING -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown">
             <a href="#"> Funding </a>
             <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
@@ -126,7 +126,7 @@
             </div
           </li>
           <!-- RESOURCES -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown">
             <a href="#"> Resources </a>
             <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
@@ -581,23 +581,23 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/scully-58-58.jpg">
+                                <img src="../../images-patternlab/tyrion-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://forumone.com/">Discussion Title</a>
+                            <a href="http://forumone.com/">A Really, Really Much Much Longer Discussion Title</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Dana Scully</a> on April 13, 2015 at 10:14am</span>
+                            <span>Posted by <a href="#">Tyrion Lannister</a> on June 8, 2015 at 11:37pm</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p>Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.</p>
+                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.</p>
                                 </div>
                               </div>
                             </div>
@@ -612,7 +612,7 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/daenerys-58-58.jpg">
+                                <img src="../../images-patternlab/gordon-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
@@ -622,7 +622,7 @@
                             <a href="http://forumone.com/">A Really, Really Much Much Longer Discussion Title</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Daenerys Targaryen</a> on May 26, 2015 at 6:37pm</span>
+                            <span>Posted by <a href="#">Gordon Clark</a> on October 25, 2015 at 3:51am</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
@@ -643,17 +643,17 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/mulder-58-58.jpg">
+                                <img src="../../images-patternlab/cameron-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://forumone.com/">Discussion Title</a>
+                            <a href="http://forumone.com/">A Longer Discussion Title</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Fox Mulder</a> on March 22, 2015 at 4:45pm</span>
+                            <span>Posted by <a href="#">Cameron Howe</a> on September 4, 2015 at 9:04am</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
@@ -681,7 +681,7 @@
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://forumone.com/">A Longer Discussion Title</a>
+                            <a href="http://forumone.com/">Discussion Title</a>
                           </h3>
                           <div class="node__posted-by">
                             <span>Posted by <a href="#">Dr. John Watson, M.D.</a> on February 10, 2015 at 1:20pm</span>
@@ -721,7 +721,7 @@
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p>Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.</p>
+                                  <p>Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.</p>
                                 </div>
                               </div>
                             </div>
@@ -736,23 +736,23 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/inigo-58-58.jpg">
+                                <img src="../../images-patternlab/buttercup-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://forumone.com/">A Really, Really Much Much Longer Discussion Title</a>
+                            <a href="http://forumone.com/">Discussion Title</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Inigo Montoya</a> on November 19, 2015 at 11:55pm</span>
+                            <span>Posted by <a href="#">Princess Buttercup</a> on December 28, 2015 at 8:34am</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.</p>
+                                  <p>Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.</p>
                                 </div>
                               </div>
                             </div>
@@ -774,41 +774,10 @@
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://forumone.com/">A Longer Discussion Title</a>
-                          </h3>
-                          <div class="node__posted-by">
-                            <span>Posted by <a href="#">Joshua Lyman</a> on July 22, 2015 at 11:12am</span>
-                          </div>
-                          <div class="node__summary">
-                            <div class="field field--discussion-desc">
-                              <div class="field-items">
-                                <div class="field-item even">
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.</p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      
-                    </div>
-                    <div class="views-row">
-                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
-                        <div class="layout-slat__media">
-                          <div class="view view-content-author">
-                            <div class="views-field views-field-field-user-photo">        
-                              <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/tyrion-58-58.jpg">
-                              </div>  
-                            </div>  
-                          </div>
-                        </div>
-                        <div class="layout-slat__content">
-                          <h3 class="node__title">
                             <a href="http://forumone.com/">A Really, Really Much Much Longer Discussion Title</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Tyrion Lannister</a> on June 8, 2015 at 11:37pm</span>
+                            <span>Posted by <a href="#">Joshua Lyman</a> on July 22, 2015 at 11:12am</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
@@ -836,7 +805,7 @@
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://forumone.com/">Discussion Title</a>
+                            <a href="http://forumone.com/">A Longer Discussion Title</a>
                           </h3>
                           <div class="node__posted-by">
                             <span>Posted by <a href="#">C.J. Cregg</a> on August 31, 2015 at 3:42pm</span>
@@ -845,7 +814,38 @@
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p>Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.</p>
+                                  <p>Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      
+                    </div>
+                    <div class="views-row">
+                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
+                        <div class="layout-slat__media">
+                          <div class="view view-content-author">
+                            <div class="views-field views-field-field-user-photo">        
+                              <div class="field-content profile-thumb__image--rounded">
+                                <img src="../../images-patternlab/mulder-58-58.jpg">
+                              </div>  
+                            </div>  
+                          </div>
+                        </div>
+                        <div class="layout-slat__content">
+                          <h3 class="node__title">
+                            <a href="http://forumone.com/">Discussion Title</a>
+                          </h3>
+                          <div class="node__posted-by">
+                            <span>Posted by <a href="#">Fox Mulder</a> on March 22, 2015 at 4:45pm</span>
+                          </div>
+                          <div class="node__summary">
+                            <div class="field field--discussion-desc">
+                              <div class="field-items">
+                                <div class="field-item even">
+                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.</p>
                                 </div>
                               </div>
                             </div>
