--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.html
@@ -61,15 +61,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/mulder-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/tyrion-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Fox Mulder</a>  
+            <a href="#">Tyrion Lannister</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            That's why they put the I in FBI.
+            Never forget what you are.  The rest of the world will not.  Wear it like armor, and it can never be used to hurt you.
           </div>
         </div>
     </article>
