--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -810,15 +810,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/mulder-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/tyrion-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Fox Mulder</a>  
+            <a href="#">Tyrion Lannister</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            That's why they put the I in FBI.
+            Never forget what you are.  The rest of the world will not.  Wear it like armor, and it can never be used to hurt you.
           </div>
         </div>
     </article>
@@ -835,15 +835,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/mulder-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/tyrion-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;Fox Mulder&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Tyrion Lannister&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            That's why they put the I in FBI.
+            Never forget what you are.  The rest of the world will not.  Wear it like armor, and it can never be used to hurt you.
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -866,13 +866,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/tyrion-35-35.jpg">
+                <img src="../../images-patternlab/buttercup-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
+              <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
               <div class="view__meta">
-                Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
+                Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
               </div>
             </div>
           </div>
@@ -881,13 +881,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/watson-35-35.jpg">
+                <img src="../../images-patternlab/scully-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+              <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
               <div class="view__meta">
-                Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
+                Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
               </div>
             </div>
           </div>
@@ -925,13 +925,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/buttercup-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
+                Posted by &lt;strong&gt;Princess Buttercup&lt;/strong&gt; | December 28 at 8:34am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -940,13 +940,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/watson-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/scully-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Dr. John Watson, M.D.&lt;/strong&gt; | February 10 at 1:20pm
+                Posted by &lt;strong&gt;Dana Scully&lt;/strong&gt; | April 13 at 10:14am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
