--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions/index.html
@@ -119,9 +119,9 @@
             <a href="#"> About </a>
           </li>
           <!-- INNOVATIONS -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown">
             <a href="#"> Innovations </a>
-            <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+            <div class="tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
                 <div class="tb-megamenu-row row-fluid">
                   <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
@@ -142,7 +142,7 @@
             </div>
           </li>
           <!-- FUNDING -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown">
             <a href="#"> Funding </a>
             <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
@@ -164,7 +164,7 @@
             </div
           </li>
           <!-- RESOURCES -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown">
             <a href="#"> Resources </a>
             <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
@@ -566,9 +566,9 @@
             &lt;a href=&quot;#&quot;&gt; About &lt;/a&gt;
           &lt;/li&gt;
           &lt;!-- INNOVATIONS --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Innovations &lt;/a&gt;
-            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
                 &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
                   &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
@@ -589,7 +589,7 @@
             &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- FUNDING --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
             &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
@@ -611,7 +611,7 @@
             &lt;/div
           &lt;/li&gt;
           &lt;!-- RESOURCES --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
             &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
