--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.escaped.html
@@ -24,9 +24,9 @@
             &lt;a href=&quot;#&quot;&gt; About &lt;/a&gt;
           &lt;/li&gt;
           &lt;!-- INNOVATIONS --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Innovations &lt;/a&gt;
-            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
                 &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
                   &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
@@ -47,7 +47,7 @@
             &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- FUNDING --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
             &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
@@ -69,7 +69,7 @@
             &lt;/div
           &lt;/li&gt;
           &lt;!-- RESOURCES --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
             &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
               &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
@@ -524,23 +524,23 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/scully-58-58.jpg&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/tyrion-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
                           &lt;/div&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;layout-slat__content&quot;&gt;
                           &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://hipsteripsum.me/&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;
+                            &lt;a href=&quot;http://www.malevole.com/mv/misc/text/&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Dana Scully&lt;/a&gt; on April 13, 2015 at 10:14am&lt;/span&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Tyrion Lannister&lt;/a&gt; on June 8, 2015 at 11:37pm&lt;/span&gt;
                           &lt;/div&gt;
                           &lt;div class=&quot;node__summary&quot;&gt;
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.&lt;/p&gt;
+                                  &lt;p&gt;Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
@@ -555,23 +555,23 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/daenerys-58-58.jpg&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/gordon-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
                           &lt;/div&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;layout-slat__content&quot;&gt;
                           &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;
+                            &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Daenerys Targaryen&lt;/a&gt; on May 26, 2015 at 6:37pm&lt;/span&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Gordon Clark&lt;/a&gt; on October 25, 2015 at 3:51am&lt;/span&gt;
                           &lt;/div&gt;
                           &lt;div class=&quot;node__summary&quot;&gt;
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.&lt;/p&gt;
+                                  &lt;p&gt;The Knights Who Say Ni demand a sacrifice! &hellip;Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
@@ -586,23 +586,23 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/mulder-58-58.jpg&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/cameron-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
                           &lt;/div&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;layout-slat__content&quot;&gt;
                           &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://baconipsum.com/&quot;&gt;Bacon ipsum dolor sit amet turducken strip steak beef ribs shank&lt;/a&gt;
+                            &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Fox Mulder&lt;/a&gt; on March 22, 2015 at 4:45pm&lt;/span&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Cameron Howe&lt;/a&gt; on September 4, 2015 at 9:04am&lt;/span&gt;
                           &lt;/div&gt;
                           &lt;div class=&quot;node__summary&quot;&gt;
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.&lt;/p&gt;
+                                  &lt;p&gt;I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
@@ -679,23 +679,23 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/inigo-58-58.jpg&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/buttercup-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
                           &lt;/div&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;layout-slat__content&quot;&gt;
                           &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://cupcakeipsum.com/&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;
+                            &lt;a href=&quot;http://www.cheeseipsum.co.uk/&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Inigo Montoya&lt;/a&gt; on November 19, 2015 at 11:55pm&lt;/span&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Princess Buttercup&lt;/a&gt; on December 28, 2015 at 8:34am&lt;/span&gt;
                           &lt;/div&gt;
                           &lt;div class=&quot;node__summary&quot;&gt;
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Sugar plum wafer souffl&eacute; ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.&lt;/p&gt;
+                                  &lt;p&gt;Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
@@ -741,37 +741,6 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/tyrion-58-58.jpg&quot;&gt;
-                              &lt;/div&gt;  
-                            &lt;/div&gt;  
-                          &lt;/div&gt;
-                        &lt;/div&gt;
-                        &lt;div class=&quot;layout-slat__content&quot;&gt;
-                          &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://www.malevole.com/mv/misc/text/&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;
-                          &lt;/h3&gt;
-                          &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Tyrion Lannister&lt;/a&gt; on June 8, 2015 at 11:37pm&lt;/span&gt;
-                          &lt;/div&gt;
-                          &lt;div class=&quot;node__summary&quot;&gt;
-                            &lt;div class=&quot;field field--discussion-desc&quot;&gt;
-                              &lt;div class=&quot;field-items&quot;&gt;
-                                &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.&lt;/p&gt;
-                                &lt;/div&gt;
-                              &lt;/div&gt;
-                            &lt;/div&gt;
-                          &lt;/div&gt;
-                        &lt;/div&gt;
-                      &lt;/div&gt;
-                      
-                    &lt;/div&gt;
-                    &lt;div class=&quot;views-row&quot;&gt;
-                      &lt;div class=&quot;layout-slat node node--discussion node--listing view-mode-listing&quot;&gt;
-                        &lt;div class=&quot;layout-slat__media&quot;&gt;
-                          &lt;div class=&quot;view view-content-author&quot;&gt;
-                            &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
-                              &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
                                 &lt;img src=&quot;../../images-patternlab/cj-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
@@ -789,6 +758,37 @@
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
                                   &lt;p&gt;Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.&lt;/p&gt;
+                                &lt;/div&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                      
+                    &lt;/div&gt;
+                    &lt;div class=&quot;views-row&quot;&gt;
+                      &lt;div class=&quot;layout-slat node node--discussion node--listing view-mode-listing&quot;&gt;
+                        &lt;div class=&quot;layout-slat__media&quot;&gt;
+                          &lt;div class=&quot;view view-content-author&quot;&gt;
+                            &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
+                              &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/mulder-58-58.jpg&quot;&gt;
+                              &lt;/div&gt;  
+                            &lt;/div&gt;  
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                        &lt;div class=&quot;layout-slat__content&quot;&gt;
+                          &lt;h3 class=&quot;node__title&quot;&gt;
+                            &lt;a href=&quot;http://baconipsum.com/&quot;&gt;Bacon ipsum dolor sit amet turducken strip steak beef ribs shank&lt;/a&gt;
+                          &lt;/h3&gt;
+                          &lt;div class=&quot;node__posted-by&quot;&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Fox Mulder&lt;/a&gt; on March 22, 2015 at 4:45pm&lt;/span&gt;
+                          &lt;/div&gt;
+                          &lt;div class=&quot;node__summary&quot;&gt;
+                            &lt;div class=&quot;field field--discussion-desc&quot;&gt;
+                              &lt;div class=&quot;field-items&quot;&gt;
+                                &lt;div class=&quot;field-item even&quot;&gt;
+                                  &lt;p&gt;Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
