--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
@@ -81,9 +81,9 @@
             <a href="#"> About </a>
           </li>
           <!-- INNOVATIONS -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown">
             <a href="#"> Innovations </a>
-            <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+            <div class="tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
                 <div class="tb-megamenu-row row-fluid">
                   <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
@@ -104,7 +104,7 @@
             </div>
           </li>
           <!-- FUNDING -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown">
             <a href="#"> Funding </a>
             <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
@@ -126,7 +126,7 @@
             </div
           </li>
           <!-- RESOURCES -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown">
             <a href="#"> Resources </a>
             <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
@@ -628,15 +628,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/mulder-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/tyrion-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">Fox Mulder</a>  
+                    <a href="#">Tyrion Lannister</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    That's why they put the I in FBI.
+                    Never forget what you are.  The rest of the world will not.  Wear it like armor, and it can never be used to hurt you.
                   </div>
                 </div>
             </article>
