--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-user/04-pages-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-user/04-pages-user.html
@@ -81,9 +81,9 @@
             <a href="#"> About </a>
           </li>
           <!-- INNOVATIONS -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown">
             <a href="#"> Innovations </a>
-            <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+            <div class="tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
                 <div class="tb-megamenu-row row-fluid">
                   <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
@@ -104,7 +104,7 @@
             </div>
           </li>
           <!-- FUNDING -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown">
             <a href="#"> Funding </a>
             <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
@@ -126,7 +126,7 @@
             </div
           </li>
           <!-- RESOURCES -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
+          <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown">
             <a href="#"> Resources </a>
             <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
               <div class="mega-dropdown-inner">
@@ -723,13 +723,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/tyrion-35-35.jpg">
+                      <img src="../../images-patternlab/buttercup-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
+                    <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
+                      Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
                     </div>
                   </div>
                 </div>
@@ -738,13 +738,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/watson-35-35.jpg">
+                      <img src="../../images-patternlab/scully-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+                    <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
+                      Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
                     </div>
                   </div>
                 </div>
