fix to panels layout, additional styling

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.html
@@ -177,15 +177,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/scully-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/cj-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">Dana Scully</a>  
+                    <a href="#">C.J. Cregg</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+                    Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
                   </div>
                 </div>
             </article>
