--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -810,15 +810,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/scully-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/cj-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Dana Scully</a>  
+            <a href="#">C.J. Cregg</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+            Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
           </div>
         </div>
     </article>
@@ -835,15 +835,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/scully-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/cj-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;Dana Scully&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;C.J. Cregg&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+            Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -866,13 +866,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/cj-35-35.jpg">
+                <img src="../../images-patternlab/scully-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+              <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
               <div class="view__meta">
-                Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
               </div>
             </div>
           </div>
@@ -881,13 +881,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/buttercup-35-35.jpg">
+                <img src="../../images-patternlab/gordon-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
+              <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
               <div class="view__meta">
-                Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
+                Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
               </div>
             </div>
           </div>
@@ -896,13 +896,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/watson-35-35.jpg">
+                <img src="../../images-patternlab/mulder-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+              <div class="view__title"><a href="#">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></div>
               <div class="view__meta">
-                Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
+                Posted by <strong>Fox Mulder</strong> | March 22 at 4:45pm
               </div>
             </div>
           </div>
@@ -925,13 +925,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/cj-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/scully-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;C.J. Cregg&lt;/strong&gt; | August 31 at 3:42pm
+                Posted by &lt;strong&gt;Dana Scully&lt;/strong&gt; | April 13 at 10:14am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -940,13 +940,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/buttercup-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Princess Buttercup&lt;/strong&gt; | December 28 at 8:34am
+                Posted by &lt;strong&gt;Gordon Clark&lt;/strong&gt; | October 25 at 3:51am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -955,13 +955,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/watson-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/mulder-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Bacon ipsum dolor sit amet turducken strip steak beef ribs shank&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Dr. John Watson, M.D.&lt;/strong&gt; | February 10 at 1:20pm
+                Posted by &lt;strong&gt;Fox Mulder&lt;/strong&gt; | March 22 at 4:45pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
