--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
@@ -272,13 +272,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/cj-35-35.jpg">
+                      <img src="../../images-patternlab/scully-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+                    <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
                     <div class="view__meta">
-                      Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                      Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
                     </div>
                   </div>
                 </div>
@@ -287,13 +287,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/buttercup-35-35.jpg">
+                      <img src="../../images-patternlab/gordon-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
+                    <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
+                      Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
                     </div>
                   </div>
                 </div>
@@ -302,13 +302,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/watson-35-35.jpg">
+                      <img src="../../images-patternlab/mulder-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+                    <div class="view__title"><a href="#">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
+                      Posted by <strong>Fox Mulder</strong> | March 22 at 4:45pm
                     </div>
                   </div>
                 </div>
